--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 <body style="text-align:center;background-image:url('Sea.jpg')">
 <h1>Adarsh's personal website</h1>
 <h2>Under construction</h2>
+<img src="me.jpg" style="align:center;height:40%;width:30%">
 </body>
