updated the design and content

--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Adarsh's website</title>
+    <title>Adarsh Kashyap | Frontend Developer from Munger</title>
+    <link rel="stylesheet" href="https://dev.animeshsingh.in/css/main.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="icon" href="me.jpg">
+    <style>
+        .hero-bg {
+            /* translucent gradient */
+            background: rgba(41, 128, 185, .91);
+            background: -webkit-linear-gradient(to right, rgba(44, 62, 80, .91), rgba(41, 128, 185, .91));
+            background: linear-gradient(to right, rgba(44, 62, 80, .91), rgba(41, 128, 185, .91));
+        }
+    </style>
 </head>
-<body style="text-align:center;background-image:url('Sea.jpg')">
-<h1>Adarsh's personal website</h1>
-<h2>Under construction</h2>
-<img src="me.jpg" style="align:center;height:40%;width:30%">
+
+<body>
+    <div class="hero" style="background-image: url(Sea.jpg)">
+        <div class="hero-bg">
+            <img src="me.jpg" alt="Adarsh Kashyap" />
+            <h1>Adarsh Kashyap</h1>
+            <p>Frontend Web Developer from Munger, Bihar!</p>
+            <p class="desc">I'm a student of 12th grade. I'm curious about web dev, Python, Machine Learning.</p>
+
+            <a href="#"><i class="icon left ion-social-wordpress"></i>blog</a>
+            <a href="#about"><i class="icon left ion-person"></i>about me</a>
+            <a href="https://www.linkedin.com/in/adarsh-kumar-65705413a/"><i class="icon left ion-social-linkedin"></i>linkedin</a>
+            <a href="mailto:ideal.ak1308@gmail.com"><i class="icon left ion-email"></i>mail</a>
+            <div class="social">
+                <a href="https://www.facebook.com/AdarshK.Kashyap"><i class="icon ion-social-facebook"></i></a>
+                <a href="https://twitter.com/Adarsh_Kashyap1"><i class="icon ion-social-twitter"></i></a>
+                <a href="https://github.com/adarshideal"><i class="icon ion-social-github"></i></a>
+                <a href="https://www.youtube.com/channel/UCu_wqeBXrb_aZOXpc-0v_SQ"><i class="icon ion-social-youtube"></i></a>
+            </div>
+        </div>
+    </div>
+
 </body>
+
+</html>
