--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>Frontend Web Developer from Munger, Bihar!</p>
             <p class="desc">I'm a student of 12th grade. I'm curious about web dev, Python, Machine Learning.</p>
 
-            <a href="#"><i class="icon left ion-social-wordpress"></i>blog</a>
+            <a href="https://adarshkashyapsite.wordpress.com"><i class="icon left ion-social-wordpress"></i>blog</a>
             <a href="#about"><i class="icon left ion-person"></i>about me</a>
             <a href="https://www.linkedin.com/in/adarsh-kumar-65705413a/"><i class="icon left ion-social-linkedin"></i>linkedin</a>
             <a href="mailto:ideal.ak1308@gmail.com"><i class="icon left ion-email"></i>mail</a>
